==> sgnes/STM32_TLE5012/Src/STM32_TLE5012B.c <==
#include "STM32_TLE5012B.h"
#include "gpio.h"
#include "main.h"
#include "spi.h"
#include "usart.h"

void triggerUpdate(void)
{
    // SCK LOW
    HAL_GPIO_WritePin(TLE5012_SCK_GPIO_Port, TLE5012_SCK_Pin, GPIO_PIN_RESET);
    // MOSI HIGH
    HAL_GPIO_WritePin(TLE5012_MOSI_GPIO_Port, TLE5012_MOSI_Pin, GPIO_PIN_SET);
    SPI_CS_ENABLE;
    HAL_Delay(DELAYuS);
    SPI_CS_DISABLE;
}

void resetSafety(void)
{
    uint16_t u16RegValue = 0;

    triggerUpdate();

    SPI_CS_ENABLE;

    u16RegValue = READ_STA_CMD;
    HAL_SPI_Transmit(TLE5012_SPI, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);
    u16RegValue = DUMMY;
    HAL_SPI_Transmit(TLE5012_SPI, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);
    HAL_SPI_Transmit(TLE5012_SPI, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);

    SPI_CS_DISABLE;
}

errorTypes checkSafety(uint16_t safety, uint16_t command, uint16_t *readreg, uint16_t length)
{
    errorTypes errorCheck;

    if (!((safety)&SYSTEM_ERROR_MASK))
    {
        errorCheck = SYSTEM_ERROR;
    }

    else if (!((safety)&INTERFACE_ERROR_MASK))
    {
        errorCheck = INTERFACE_ACCESS_ERROR;
    }

    else if (!((safety)&INV_ANGLE_ERROR_MASK))
    {
        errorCheck = INVALID_ANGLE_ERROR;
    }

    else
    {
        uint16_t         lengthOfTemp = length * 2 + 2;
        volatile uint8_t temp[lengthOfTemp];

        temp[0] = _getFirstByte(command);
        temp[1] = _getSecondByte(command);

        for (uint16_t i = 0; i < length; i++)
        {
            temp[2 + 2 * i] = _getFirstByte(readreg[i]);
            temp[2 + 2 * i + 1] = _getSecondByte(readreg[i]);
        }

        uint8_t crcReceivedFinal = _getSecondByte(safety);

        uint8_t crc = _crcCalc(temp, lengthOfTemp);

        if (crc == crcReceivedFinal)
        {
            errorCheck = NO_ERROR;
        }
        else
        {
            errorCheck = CRC_ERROR;
            resetSafety();
        }
    }

    return errorCheck;
}

errorTypes readFromSensor(uint16_t command, uint16_t *data)
{
    uint16_t safety = 0;
    uint16_t readreg;
    uint16_t         u16RegValue     = 0;
    GPIO_InitTypeDef GPIO_InitStruct = { 0 };

    SPI_CS_ENABLE;

    u16RegValue = command;

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
    TLE5012_SET_MOSI_MODE_AF_PP();
#endif

    HAL_SPI_Transmit(TLE5012_SPI, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
    TLE5012_SET_MOSI_MODE_INPUT();
#endif

    HAL_SPI_Receive(TLE5012_SPI, (uint8_t *)(&readreg), 1, 0xFF);
    HAL_SPI_Receive(TLE5012_SPI, (uint8_t *)(&safety), 1, 0xFF);

    SPI_CS_DISABLE;

    errorTypes checkError = checkSafety(safety, command, &readreg, 1);

    if (checkError != NO_ERROR)
    {
        *data = 0;
        return checkError;
    }
    else
    {
        *data = readreg;
        return NO_ERROR;
    }
}

errorTypes readBlockCRC(void)
{
    uint16_t u16RegValue = 0;
    uint16_t         safety          = 0;
    GPIO_InitTypeDef GPIO_InitStruct = { 0 };

    SPI_CS_ENABLE;

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
    TLE5012_SET_MOSI_MODE_AF_PP();
#endif

    u16RegValue = READ_BLOCK_CRC;
    HAL_SPI_Transmit(TLE5012_SPI, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFFFF);

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
    TLE5012_SET_MOSI_MODE_INPUT();
#endif

    HAL_SPI_Receive(TLE5012_SPI, (uint8_t *)(&_registers), CRC_NUM_REGISTERS, 0xFF);
    HAL_SPI_Receive(TLE5012_SPI, (uint8_t *)(&safety), 1, 0xFF);

    errorTypes checkError = checkSafety(safety, READ_BLOCK_CRC, _registers, CRC_NUM_REGISTERS);

    return checkError;
}
